LU-6066 lfsck: handle file's nlink attribute properly

If the LFSCK does not know whether the file's linkEA is valid
or not, then it should not use the linkEA to verify the file's
nlink attribute.

If the file has been removed during the LFSCK, the LFSCK should
skip the file's nlink attribute verification.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I13deedce369f8c76ed97bc0bd29e00c82b1e89ff
Reviewed-on: http://review.whamcloud.com/13181
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>